[gd_scene load_steps=15 format=3 uid="uid://dlt1f4vrrjvuh"]

[ext_resource type="PackedScene" uid="uid://cxwfeo3rnbkuk" path="res://build_menu/build_card_in_storage.tscn" id="1_snqsl"]
[ext_resource type="PackedScene" uid="uid://h18lmfafkfqx" path="res://build_menu/build_card_in_deck.tscn" id="2_sk3ms"]
[ext_resource type="Script" uid="uid://du40qngs8wthc" path="res://build_menu/transfer_card.gd" id="3_61byw"]
[ext_resource type="PackedScene" uid="uid://eo2xwph6s0he" path="res://build/builds/moat/moat.tscn" id="3_cbn32"]
[ext_resource type="PackedScene" uid="uid://b6upphtm384dd" path="res://build/builds/tower/tower.tscn" id="4_yhgas"]
[ext_resource type="Script" uid="uid://gxhhhhtjv8k" path="res://build_menu/save_deck.gd" id="5_dwxnp"]
[ext_resource type="PackedScene" uid="uid://cobpo3gg4obs1" path="res://build/builds/mountains/mountains.tscn" id="5_hd37i"]
[ext_resource type="Script" uid="uid://bpdqqsbiw6bpu" path="res://build_menu/load_available_cards.gd" id="5_qlewh"]
[ext_resource type="Script" uid="uid://bvev0dvf1oclm" path="res://build_menu/save_available_cards.gd" id="6_n2olu"]
[ext_resource type="Script" uid="uid://dfg3uhl64s5t0" path="res://build_menu/load_deck.gd" id="8_0ybjp"]
[ext_resource type="Script" uid="uid://cd64k7xpbsbuq" path="res://build_menu/disable_next_button_if_less_2_cards_in_deck.gd" id="9_0foud"]
[ext_resource type="Script" uid="uid://h2fex1pfqr3p" path="res://build_menu/tutor.gd" id="10_w524g"]
[ext_resource type="Script" uid="uid://c8jr80qi63phi" path="res://dev_tools/dev_tools.gd" id="13_ccftc"]
[ext_resource type="Script" uid="uid://c7leuxcmt6jlb" path="res://dev_tools/changename_with_ai/changename_with_ai.gd" id="14_we3po"]

[node name="BuildMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_horizontal_guides_ = [624.0]

[node name="BuildCardContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -474.0
offset_top = -279.0
offset_right = 474.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
columns = 14

[node name="BuildCardInStorage" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage2" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "???????"
packed_build = ExtResource("4_yhgas")
card_disabled = true

[node name="BuildCardInStorage3" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "???????"
packed_build = ExtResource("3_cbn32")
card_disabled = true

[node name="BuildCardInStorage4" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "???????"
packed_build = ExtResource("5_hd37i")
card_disabled = true

[node name="BuildCardInStorage5" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "???????"
packed_build = ExtResource("5_hd37i")
card_disabled = true

[node name="BuildCardInStorage6" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage7" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage8" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage9" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage10" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage11" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage12" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage13" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage14" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage15" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage16" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage17" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage18" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage19" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage20" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage21" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage22" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage23" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage24" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage25" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage26" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage27" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage28" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage29" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage30" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage31" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage32" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage33" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage34" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage35" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage36" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage37" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage38" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage39" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage40" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage41" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="BuildCardInStorage42" parent="BuildCardContainer" instance=ExtResource("1_snqsl")]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
card_disabled = true

[node name="LoadAvailableCards" type="Node" parent="."]
script = ExtResource("5_qlewh")

[node name="SaveAvailableCards" type="Node" parent="."]
script = ExtResource("6_n2olu")

[node name="BaseDeck" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(64, 128)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -672.0
offset_top = -152.0
offset_right = -32.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0

[node name="BuildCardInDeck" parent="BaseDeck" instance=ExtResource("2_sk3ms")]
layout_mode = 2
text = ""
packed_build = null

[node name="BuildCardInDeck2" parent="BaseDeck" instance=ExtResource("2_sk3ms")]
layout_mode = 2
text = ""
packed_build = null

[node name="BuildCardInDeck3" parent="BaseDeck" instance=ExtResource("2_sk3ms")]
layout_mode = 2
text = ""
packed_build = null

[node name="BuildCardInDeck4" parent="BaseDeck" instance=ExtResource("2_sk3ms")]
layout_mode = 2
text = ""
packed_build = null

[node name="TransferCard" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_61byw")

[node name="SaveDeck" type="Node" parent="."]
script = ExtResource("5_dwxnp")

[node name="NextButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 1008.0
offset_top = 593.0
offset_right = 1051.0
offset_bottom = 624.0
text = "next
"

[node name="LoadDeck" type="Node" parent="."]
script = ExtResource("8_0ybjp")

[node name="ChooseDeckLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 463.0
offset_right = 748.0
offset_bottom = 486.0
text = "Deck"

[node name="BuildStorageLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 5.0
offset_right = 142.0
offset_bottom = 28.0
text = "Build storage"

[node name="DisableNextButtonIfLess2CardsInDeck" type="Node" parent="."]
script = ExtResource("9_0foud")

[node name="Tutor" type="Node" parent="."]
script = ExtResource("10_w524g")

[node name="PressOnBuild" type="Panel" parent="Tutor"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -342.0
offset_top = -248.0
offset_right = -147.0
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MyPanel"

[node name="Label" type="Label" parent="Tutor/PressOnBuild"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = 3.0
offset_right = -19.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Click on any building"
autowrap_mode = 3

[node name="PressOnEmptySlotInDeck" type="Panel" parent="Tutor"]
visible = false
offset_left = 302.0
offset_top = 486.0
offset_right = 462.0
offset_bottom = 612.0
theme_type_variation = &"MyPanel"

[node name="Label" type="Label" parent="Tutor/PressOnEmptySlotInDeck"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = 12.0
offset_right = -19.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
text = "Click on a free slot"
autowrap_mode = 3

[node name="NeedMinumum2BuildInDeck" type="Panel" parent="Tutor"]
visible = false
offset_left = 846.0
offset_top = 463.0
offset_right = 1050.0
offset_bottom = 581.0
theme_type_variation = &"MyPanel"

[node name="Label" type="Label" parent="Tutor/NeedMinumum2BuildInDeck"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = 12.0
offset_right = -19.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
text = "You need 2 cards in the Deck to go next"
autowrap_mode = 3

[node name="NeedMinumum2BuildInDeckButton" type="Button" parent="Tutor/NeedMinumum2BuildInDeck"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
text = "ok"

[node name="DevTools" type="Node" parent="."]
script = ExtResource("13_ccftc")
disabled = true

[node name="CHANGENAME WITH AI" type="Panel" parent="DevTools"]
visible = false
offset_top = 211.0
offset_right = 462.0
offset_bottom = 624.0
script = ExtResource("14_we3po")

[node name="GridContainer" type="GridContainer" parent="DevTools/CHANGENAME WITH AI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage" to="BuildCardContainer/BuildCardInStorage" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage2" to="BuildCardContainer/BuildCardInStorage2" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage3" to="BuildCardContainer/BuildCardInStorage3" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage4" to="BuildCardContainer/BuildCardInStorage4" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage5" to="BuildCardContainer/BuildCardInStorage5" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage6" to="BuildCardContainer/BuildCardInStorage6" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage7" to="BuildCardContainer/BuildCardInStorage7" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage8" to="BuildCardContainer/BuildCardInStorage8" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage9" to="BuildCardContainer/BuildCardInStorage9" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage10" to="BuildCardContainer/BuildCardInStorage10" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage11" to="BuildCardContainer/BuildCardInStorage11" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage12" to="BuildCardContainer/BuildCardInStorage12" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage13" to="BuildCardContainer/BuildCardInStorage13" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage14" to="BuildCardContainer/BuildCardInStorage14" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage15" to="BuildCardContainer/BuildCardInStorage15" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage16" to="BuildCardContainer/BuildCardInStorage16" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage17" to="BuildCardContainer/BuildCardInStorage17" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage18" to="BuildCardContainer/BuildCardInStorage18" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage19" to="BuildCardContainer/BuildCardInStorage19" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage20" to="BuildCardContainer/BuildCardInStorage20" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage21" to="BuildCardContainer/BuildCardInStorage21" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage22" to="BuildCardContainer/BuildCardInStorage22" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage23" to="BuildCardContainer/BuildCardInStorage23" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage24" to="BuildCardContainer/BuildCardInStorage24" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage25" to="BuildCardContainer/BuildCardInStorage25" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage26" to="BuildCardContainer/BuildCardInStorage26" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage27" to="BuildCardContainer/BuildCardInStorage27" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage28" to="BuildCardContainer/BuildCardInStorage28" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage29" to="BuildCardContainer/BuildCardInStorage29" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage30" to="BuildCardContainer/BuildCardInStorage30" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage31" to="BuildCardContainer/BuildCardInStorage31" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage32" to="BuildCardContainer/BuildCardInStorage32" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage33" to="BuildCardContainer/BuildCardInStorage33" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage34" to="BuildCardContainer/BuildCardInStorage34" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage35" to="BuildCardContainer/BuildCardInStorage35" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage36" to="BuildCardContainer/BuildCardInStorage36" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage37" to="BuildCardContainer/BuildCardInStorage37" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage38" to="BuildCardContainer/BuildCardInStorage38" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage39" to="BuildCardContainer/BuildCardInStorage39" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage40" to="BuildCardContainer/BuildCardInStorage40" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage41" to="BuildCardContainer/BuildCardInStorage41" method="_on_button_down"]
[connection signal="button_down" from="BuildCardContainer/BuildCardInStorage42" to="BuildCardContainer/BuildCardInStorage42" method="_on_button_down"]
[connection signal="button_down" from="BaseDeck/BuildCardInDeck" to="BaseDeck/BuildCardInDeck" method="_on_button_down"]
[connection signal="button_down" from="BaseDeck/BuildCardInDeck2" to="BaseDeck/BuildCardInDeck2" method="_on_button_down"]
[connection signal="button_down" from="BaseDeck/BuildCardInDeck3" to="BaseDeck/BuildCardInDeck3" method="_on_button_down"]
[connection signal="button_down" from="BaseDeck/BuildCardInDeck4" to="BaseDeck/BuildCardInDeck4" method="_on_button_down"]
[connection signal="button_up" from="NextButton" to="SaveDeck" method="_on_next_button_button_up"]
